#project(Network_app)
find_package(Protobuf REQUIRED)
protobuf_generate_cpp(PROTO_SRCS PROTO_HRDS buffer.proto)
if (NW_DEBUG)
	add_definitions(-DNW_DEBUG)
endif()
add_definitions (-DLinux)
if (DEBUG)
	add_definitions(-DDEBUG)
endif()

FIND_LIBRARY (SDK_LIB libADI_TOF.so ./)
add_executable(Network_app Server.cpp Server.h ${PROTO_SRCS} ${PROTO_HDRS})
target_link_libraries(Network_app ${SDK_LIB})
target_link_libraries(Network_app protobuf)
target_link_libraries(Network_app websockets)
